--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7",
+    "node-schedule": "^2.1.1",
+    "node-telegram-bot-api": "^0.66.0",
+    "socket.io": "^4.8.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
