--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "This is awesome server",
   "main": "server.js",
-  "type": "module",
+   "type": "module",
+   "engines": {
+  "node": "18.x"
+},
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
