--- a/package.json
+++ b/package.json
@@ -3,29 +3,34 @@
   "version": "1.0.0",
   "description": "This is awesome server",
   "main": "server.js",
-   "type": "module",
-   "engines": {
-  "node": "18.x"
-},
+  "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-"git": "git add . && git commit -m \"auto fast commit\" && git push origin main"
+    "git": "git add . && git commit -m \"auto fast commit\" && git push origin main"
   },
   "keywords": [],
   "author": "SpaceProdigy",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.1",
+    "cloudinary": "^2.5.1",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "googleapis": "^146.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
     "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
