--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "cron": "node cronReminder.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "git": "git add . && git commit -m \"auto fast commit\" && git push origin main"
   },
