add time zone for schedule

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST=
 PORT=
 TELEGRAM_BOT_KEY_FLEX_SP_BOT=
- CLOUDINARY_CLOUD_NAME=
- CLOUDINARY_API_KEY=6
- CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
