--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
