--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.3",
     "fs": "^0.0.1-security",
     "googleapis": "^146.0.0",
     "joi": "^17.13.3",
